--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'java'
     id 'org.xbib.gradle.plugin.jflex' version '1.2.0'
-    id 'de.undercouch.download' version '4.0.0'
+    id 'org.xbib.gradle.plugin.jacc' version '1.1.3'
+    id 'de.undercouch.download' version "4.0.0"
 }
 
 group 'decaf'
@@ -28,31 +29,6 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 }
-
-task ll1pg(type: Task) {
-    download {
-        src 'https://github.com/paulzfm/ll1pg/releases/download/decaf-course-19-fall/ll1pg-decaf-course-19-fall.jar'
-        dest "$rootDir/ll1pg.jar"
-        overwrite false
-    }
-
-    ConfigurableFileTree fs = fileTree(dir: file('src/main/ll1pg'), include: '**/*.spec')
-    File dstDir = file("$project.buildDir/generated-src/ll1pg")
-    delete(dstDir)
-    mkdir(dstDir)
-
-    if (fs.empty) System.err.println("No *.spec file found in 'src/main/ll1pg/', skip")
-    fs.visit { FileVisitDetails f ->
-        if (f.isDirectory) return
-        javaexec {
-            classpath = files("$rootDir/ll1pg.jar")
-            main = 'decaf.tools.ll1pg.Main'
-            args = [f.file.path, dstDir.path]
-        }
-    }
-}
-
-tasks.compileJava.dependsOn tasks.ll1pg
 
 jar {
     manifest {
